--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>como criar um site</h1> 
-<h6>do inicinte ao avancado</h6>   
+<h6>do inicinte ao avançado</h6>   
 </body>
 </html>
