--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 <h1>como criar um site</h1> 
 <h6>do inicinte ao avançado</h6>   
-<p>ppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppenis</p>
+<p>ola iui</p>
 </body>
 </html>
