--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>como criar um site</h1> 
 <h6>do inicinte ao avançado</h6>   
 <p>site</p>
-<img src="" alt="">
+<img src="./channels4_profile.jpg" alt="">
 </body>
 </html>
