--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h6>do inicinte ao avançado</h6>   
 <p>site</p>
 <img src="./channels4_profile.jpg" alt="em busca da morena fncs">
+<img src="./download.jpg" alt="">
 
 </body>
 </html>
