--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>SiteMaker</title>
-
+ <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <h1>como criar um site</h1> 
