--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <h1>como criar um site</h1> 
 <h6>do inicinte ao avançado</h6>   
 <p>site</p>
-<img src="./channels4_profile.jpg" alt="em busca da morena fncs">
-<img src="./download.jpg" alt="">
+<img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso"
 
 </body>
 </html>
