--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>SiteMaker</title>
- <link rel="stylesheet" href="./style.css">
+    <meta name="SiteMaker" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-<h1>como criar um site</h1> 
-<h6>do inicinte ao avançado</h6>   
-<p>site</p>
-<img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso"
 
+<body>
+    <header>
+        <h1>como criar um site</h1>
+    <h6>do inicinte ao avançado</h6>
+    <p>site</p>
+    <img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso">
+</header>
 </body>
+
 </html>
