--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h6>do inicinte ao avançado</h6>
     <p>site</p>
     <img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso">
+    <!-- sitemaker -->
 </header>
 </body>
 
