--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!SiteMaker html>
 <html lang="pt-br">
 
 <head>
@@ -16,6 +16,11 @@
     <img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso">
     <!-- sitemaker -->
 </header>
+<section>
+     <h2>bem vindo ao nosso site:</h2>
+    <p></p>
+     <img class="img-intro" src="./blog-setembro-2-1.jpg" alt="imagem programador">
+</section>
 </body>
 
 </html>
