--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="SiteMaker" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sitemaker</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -16,9 +16,12 @@
     <img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso">
     <!-- sitemaker -->
 </header>
-<section>
+<section class="intro">
+    <div>
      <h2>bem vindo ao nosso site:</h2>
-    <p></p>
+    <p>lalala</p>
+    <p>lalala</p>
+    </div>
      <img class="img-intro" src="./blog-setembro-2-1.jpg" alt="imagem programador">
 </section>
 </body>
