--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="SiteMaker" content="width=device-width, initial-scale=1.0">
-    <title>sitemaker</title>
+    <title>SiteMaker</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
