--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="SiteMaker" content="width=device-width, initial-scale=1.0">
     <title>SiteMaker</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css"> 
+
 </head>
 
 <body>
-    <header>
+    <header> 
+        <style></style>
         <h1>como criar um site</h1>
     <h6>do inicinte ao avançado</h6>
     <p>site</p>
