--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <h1>como criar um site</h1>
     <h6>do inicinte ao avançado</h6>
     <p>site</p>
-    <img src="./blog-setembro-2-1.jpg" alt="progamador de sucesso">
+</section> class= "intro">
+    <img class="img-intro" src="/blog-setembro-2-1.jpg" alt="progamador de sucesso">
     <!-- sitemaker -->
+</section>
     
 </header>
 <section class="intro">
