--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     </div>
      <img class="img-intro" src="./blog-setembro-2-1.jpg" alt="imagem programador">
 </section>
+     <SEction class="Equipe">
+<div>
+    <img src="" alt="foto Mateus">
+    <h3>Sr.Mateus</h3>
+</div>
+<div>
+    <img src="" alt="foto Maikon">
+    <h3>Sr.Maikon</h3>
+</div>
+<div>
+    <img src="" alt="foto João">
+    <h3>Sr.João</h3>
+</div>
+     </SEction>
 </body>
 
 </html>
