--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 </section>
      <SEction class="Equipe">
 <div>
-    <img src="" alt="foto Mateus">
+    <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
     <h3>Sr.Mateus</h3>
 </div>
 <div>
-    <img src="" alt="foto Maikon">
+    <img class="foto-equipe" src="./image copy 2.png" alt="foto Maikon">
     <h3>Sr.Maikon</h3>
 </div>
 <div>
-    <img src="" alt="foto João">
+    <img class="foto-equipe" src="./image.png" alt="foto João">
     <h3>Sr.João</h3>
 </div>
      </SEction>
