--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="SiteMaker" content="width=device-width, initial-scale=1.0">
+    <meta name="Life" content="width=device-width, initial-scale=1.0">
     <title>SiteMaker</title>
     <link rel="stylesheet" href="./style.css"> 
 
