--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Life" content="width=device-width, initial-scale=1.0">
-    <title>SiteMaker</title>
+    <title>RelacionTips</title>
     <link rel="stylesheet" href="./style.css"> 
 
 </head>
 
 <body>
     <header> 
-        <h1>como criar um site</h1>
-    <h6>do inicinte ao avançado</h6>
+        <h1>Dicas de como ter um relacionamento melhor</h1>
+    <h6>caminhe conosco e durem para sempre;</h6>
     <p>site</p>
      </header>
 <section class="intro">
     <div>
-     <h2>bem vindo ao nosso site:</h2>
-    <p>lalala</p>
-    <p>lalala</p>
+     <h2>Bem Vindo ao nosso Site</h2>
+    <p> Vamos dar dicas de como evoluir como um só</p>
+    <p>DICAS</p>
     </div>
-     <img class="img-intro" src="./blog-setembro-2-1.jpg" alt="imagem programador">
+     <img class="img-intro" src="" alt="CASAL BEM SUCESSIDO">
 </section>
-     <SEction class="Equipe">
+     <section class="Equipe">
 <div>
     <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
     <h3>Sr.Mateus</h3>
@@ -36,7 +36,7 @@
     <img class="foto-equipe" src="./image.png" alt="foto João">
     <h3>Sr.João</h3>
 </div>
-     </SEction>
+     </section>
 </body>
 
 </html>
