--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <p> Vamos dar dicas de como evoluir como um só</p>
     <p>DICAS</p>
     </div>
-     <img class="img-intro" src="" alt="CASAL BEM SUCESSIDO">
+     <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
 </section>
-     <section class="Equipe">
+     <section class="equipe">
 <div>
     <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
     <h3>Sr.Mateus</h3>
