--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Life" content="width=device-width, initial-scale=1.0">
-    <title>RelacionTips</title>
+    <title>RelationTips</title>
     <link rel="stylesheet" href="./style.css"> 
 
 </head>
