--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     <img class="foto-equipe" src="./image.png" alt="foto João">
     <h3>Sr.João</h3>
 </div>
+<section>
+    <footer>
+        <p>Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confira lá!</a></p>
+        <p> Estamos localizados em: Rua João Gualberto n° 250</p>
+    <p>Telefone de contato: 41984395903</p>
+</footer>
+</section>
      </section>
 </body>
 
