--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 </div>
 <section>
     <footer>
-        <p>Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confira lá!</a></p>
+        <p>Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confer la!!</a></p>
         <p> Estamos localizados em: Rua João Gualberto n° 250</p>
-    <p>Telefone de contato: 41984395903</p>
-</footer>
-</section>
+    <p>Telefone de contato: 41984395903</p>e
      </section>
 </body>
 
