--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <header> 
         <h1>Dicas de como ter um relacionamento melhor</h1>
-    <h6>caminhe conosco e durem para sempre;</h6>
-    <p>site</p>
+    <h6>caminhe conosco e  </h6>
+    <p>durem para sempre</p>
+    <a><p>equipe</p></a>
      </header>
 <section class="intro">
     <div>
@@ -23,7 +24,7 @@
     </div>
      <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
 </section>
-     <section class="equipe">
+     <section id="equipe">
 <div>
     <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
     <h3>Sr.Mateus</h3>
