--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header> 
         <h1>Dicas de como ter um relacionamento melhor</h1>
-    <h6>caminhe conosco e  </h6>
+    <h6>CAMINHEM CONOSCO</h6>
     <p>durem para sempre</p>
     <a><p>equipe</p></a>
      </header>
