--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header> 
         <h1>Dicas de como ter um relacionamento melhor</h1>
     <h6>CAMINHEM CONOSCO</h6>
-    <p>durem para sempre</p>
-    <a><p>equipe</p></a>
+    <a href="#equipe"><p>equipe</p></a>
      </header>
 <section class="intro">
     <div>
