--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <div>
      <h2>Bem Vindo ao nosso Site</h2>
     <p> Vamos dar dicas de como evoluir como um só</p>
-    <p>DICAS</p>
+    <section>
+        <p>DICAS</p>
+        <h1>Respeito é a base de um relacionamento</h1>
+        <h6>Com FVJN X\B DFB JH0IF BJHI0</h6>
+    </section>
+    
     </div>
      <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
 </section>
