--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      <h2>Bem Vindo ao nosso Site</h2>
     <p> Vamos dar dicas de como evoluir como um só</p>
     <section>
+        <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
         <p>DICAS</p>
         <h1>Respeito é a base de um relacionamento</h1>
         <h6>Um</h6>
