--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Dicas de como ter um relacionamento melhor</h1>
     <h6>CAMINHEM CONOSCO</h6>
     <a href="#equipe"><p>equipe</p></a>
+    <a href> class </a> 
      </header>
 <section class="intro">
     <div>
