--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
         <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
         <p>DICAS</p>
         <h1>Respeito é a base de um relacionamento</h1>
-        <h6>Um</h6>
+        <h6>Para um relacionamento ser duradouro a base é o respeito, porque sem respeito não ha união</h6>
     </section>
-    
+    <section>
+        <h1>Comunicação</h1>
+        <h6>A comunicação é um dos pilares de uma relação saudável, pois se não houver comunicação de ambos os lados pode acabar em várias discussões   </h6>
+    </section>
+    <section>
+        <h1>Dormir brigado</h1>
+        <h6>Ter discussões é comum em relacionamentos , mas a maneira como lida com eles interfere diretamente no relacionamento, dormir brigado pode afetar o seu parceiro/a, pois não sabemos o que passa pelo cabeça do ente</h6>
+    </section>
+    <section>
+        <h1>fidelidade</h1>
+        <h6>Ser fiel sempre, não ficar de gracinha com outras pessoas fora do seu relacionamento</h6>
+    </section>
     </div>
 </section>
      <section id="equipe">
