--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
         <h1>Dicas de como ter um relacionamento melhor</h1>
     <h6>CAMINHEM CONOSCO</h6>
     <a href="#equipe"><p>equipe</p></a>
-    <a href> class </a> 
+    <a href="#insta"> <div id="insta"></div></a> 
+
      </header>
 <section class="intro">
     <div>
      <h2>Bem Vindo ao nosso Site</h2>
     <p> Vamos dar dicas de como evoluir como um só</p>
-    <section>
+</div>
+</section>
+
+    <section class="">
         <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
         <p>DICAS</p>
         <h1>Respeito é a base de um relacionamento</h1>
@@ -38,8 +42,6 @@
         <h1>fidelidade</h1>
         <h6>Ser fiel sempre, não ficar de gracinha com outras pessoas fora do seu relacionamento</h6>
     </section>
-    </div>
-</section>
      <section id="equipe">
 <div>
     <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
@@ -55,7 +57,7 @@
 </div>
 <section>
     <footer>
-        <p>Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confere la!!</a></p>
+        <p id="insta">Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confere la!!</a></p>
         <p> Estamos localizados em: Rua João Gualberto n° 250</p>
     <p>Telefone de contato: 41984395903</p>e
      </section>
