--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Dicas de como ter um relacionamento melhor</h1>
     <h6>CAMINHEM CONOSCO</h6>
     <a href="#equipe"><p>equipe</p></a>
-    <a href="#insta"> <div id="insta"></div></a> 
+    <a href="#insta"><p>Instagram</p></a> 
 
      </header>
 <section class="intro">
