--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 <section>
     <footer>
-        <p id="insta">Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">confere la!!</a></p>
+        <p id="insta">Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">RelationTips</a></p>
         <p> Estamos localizados em: Rua João Gualberto n° 250</p>
     <p>Telefone de contato: 41984395903</p>e
      </section>
