--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 </section>
 
-    <section class="">
+    <section class="img-intro">
         <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
         <p>DICAS</p>
         <h1>Respeito é a base de um relacionamento</h1>
