--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <h1>Respeito é a base de um relacionamento</h1>
         <h4>Para um relacionamento ser duradouro a base é o respeito, porque sem respeito não ha união</h4>
     </section>
-    <section>
+    <section class="dir">
         <h1>Comunicação</h1>
         <h4>A comunicação é um dos pilares de uma relação saudável, pois se não houver comunicação de ambos os lados pode acabar em várias discussões   </h4>
     </section>
-    <section>
+    <section >
         <h1>Dormir brigado</h1>
         <h4>Ter discussões é comum em relacionamentos , mas a maneira como lida com eles interfere diretamente no relacionamento, dormir brigado pode afetar o seu parceiro/a, pois não sabemos o que passa pelo cabeça do ente</h4>
     </section>
-    <section>
+    <section  class="dir">
         <h1>fidelidade</h1>
         <h4>Ser fiel sempre, não ficar de gracinha com outras pessoas fora do seu relacionamento</h6>
     </section>
