--- a/index.html
+++ b/index.html
@@ -1,65 +1,12 @@
-<!SiteMaker html>
+<!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="Life" content="width=device-width, initial-scale=1.0">
-    <title>RelationTips</title>
-    <link rel="stylesheet" href="./style.css"> 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <header> 
-        <h1>Dicas de como ter um relacionamento melhor</h1>
-    <h6>CAMINHEM CONOSCO</h6>
-    <a href="#equipe"><p>equipe</p></a>
-    <a href="#insta"><p>Instagram</p></a> 
-
-     </header>
-<section class="intro">
-    <div>
-     <h2>Bem Vindo ao nosso Site</h2>
-    <p> Vamos dar dicas de como evoluir como um só</p>
-</div>
-</section>
-
-    <section class="img-intro">
-        <img class="img-intro" src="./image copy 3.png" alt="CASAL BEM SUCESSIDO">
-        <h1>Respeito é a base de um relacionamento</h1>
-        <h4>Para um relacionamento ser duradouro a base é o respeito, porque sem respeito não ha união</h4>
-    </section>
-    <section class="dir">
-        <h1>Comunicação</h1>
-        <h4>A comunicação é um dos pilares de uma relação saudável, pois se não houver comunicação de ambos os lados pode acabar em várias discussões   </h4>
-    </section>
-    <section >
-        <h1>Dormir brigado</h1>
-        <h4>Ter discussões é comum em relacionamentos , mas a maneira como lida com eles interfere diretamente no relacionamento, dormir brigado pode afetar o seu parceiro/a, pois não sabemos o que passa pelo cabeça do ente</h4>
-    </section>
-    <section  class="dir">
-        <h1>fidelidade</h1>
-        <h4>Ser fiel sempre, não ficar de gracinha com outras pessoas fora do seu relacionamento</h6>
-    </section>
-     <section id="equipe">
-<div>
-    <img class="foto-equipe" src="./image copy.png" alt="foto Mateus">
-    <h3>Sr.Mateus</h3>
-</div>
-<div>
-    <img class="foto-equipe" src="./image copy 2.png" alt="foto Maikon">
-    <h3>Sr.Maikon</h3>
-</div>
-<div>
-    <img class="foto-equipe" src="./image.png" alt="foto João">
-    <h3>Sr.João</h3>
-</div>
-<section>
-    <footer>
-        <p id="insta">Nos siga em: <a href="https://www.instagram.com/relactiontipss?igsh=MTN3YXBzMXN0dzBxMw==">RelationTips</a></p>
-        <p> Estamos localizados em: Rua João Gualberto n° 250</p>
-    <p>Telefone de contato: 41984395903</p>e
-     </section>
+    <button>garanta seu fgts</button>
+    <script src="main.js"></script>
 </body>
-
 </html>
